syntax = "proto3";

package ai.metathings.service.evaluatord;
option go_package = "evaluatord";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message PatchEvaluatorRequest {
	OpEvaluator evaluator = 1 [(validator.field) = {msg_exists: true}];
}

message PatchEvaluatorResponse {
	Evaluator evaluator = 1;
}
